# liora

./: .env.example  .gitignore  AGENTS.md  README.md  binary_search.py  go.mod  go.sum  implementation-notes.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/: README.md
docs/: 00-index.md  02-coding-agent-architecture-plan.md  03-tech-stack-selection.md  04-v0.1-exit-audit.md  05-mvp-exit-benchmark.md  06-release-packaging.md  07-development-workflow.md  10-16-personality-agent-prd.md  11-16-personality-agent-persona-spec.md  12-16人格日记本.md  13-hardening-remediation-plan.md  16-personality-agent-persona-spec.md  16-personality-agent-prd.md  16人格日记本.md  README.md  claude-code-parity-roadmap.md  coding-agent-architecture-plan.md  liora-1.0-plan.md  liora-architecture-benchmark.md  mvp-exit-benchmark.md  release.md  tech-stack-selection.md  technical-plan.md  tui-agent-parity-plan.md  v0.1-exit-audit.md
evals/: README.md  pyproject.toml
evals/cases/: coding.json
evals/liora_evals/: __init__.py  cases.py  metrics.py  runner.py  scripted_llm.py
evals/tests/: test_contract.py  test_deterministic_agent.py  test_live_agent.py
scripts/: architecture-guard.sh  architecture_guard_test.go  clean-workspace.sh  coding-eval.sh  daemon-smoke.sh  daemon_smoke_test.go  deepeval.sh  diagnostics-smoke.sh  install-local.sh  install_test.go  liora-1.0-audit.sh  local-install-smoke.sh  next-release-version.sh  npm-lazy-smoke.sh  package-release.sh  release-smoke.sh  release-supply-chain-audit.sh  supply_chain_test.go  tui-smoke.sh  v0.1-exit-audit.sh
(+217 files in other folders)
